2003-01-21  Jody Goldberg <jody@gnome.org>

	* ms-excel-write.c (excel_foreach_name) : doh!

2003-01-08  Jody Goldberg <jody@gnome.org>

	* ms-excel-write.c (excel_sheet_new) : fix the text of the warning
	  messages.
	(excel_foreach_name) : loop over the gnumeric data structures rather
	  than the ExcelState wrappers so that we can do things before the
	  ExcelSheets are created.

	* ms-biff.c (MAX_BIFF7_RECORD_SIZE) : increase this a smidge to match
	  the actual limit and allow export to handle all 16k rows in xl95.

2003-01-06  Jody Goldberg <jody@gnome.org>

	* ms-excel-write.c (excel_write_state_new) : bp is not valid yet
	  take biff7 and biff8 flags directly.

2003-01-02  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (excel_read_1904) : Enable 1904 support.
	* ms-excel-write.c (write_workbook) : Set 1904 flag as necessary.

2002-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.1.15

2002-12-30  Jody Goldberg <jody@gnome.org>

	* ms-excel-write.c (excel_write_WRITEACCESS) : patch small leak, and
	  add a sanity failsafe.

2002-12-29  Jody Goldberg <jody@gnome.org>

	* ms-biff.c (ms_biff_put_new) : Use the canonical name that is
	  available in glibc, and libiconv.

2002-12-30  Jon K Hellan  <hellan@acm.org>

	* ms-excel-read.c (excel_read_workbook): Pass filename to
	cmd_context_get_password.

2002-12-30  Morten Welinder  <terra@diku.dk>

	* ms-excel-read.c (excel_formula_shared): Return NULL on failure,
	not FALSE.

2002-12-25  Jody Goldberg <jody@gnome.org>

	* ms-excel-write.c (excel_write_state_new) : register sheets with
	  filters.  check validation exppressions for sheets.
	(excel_write_prep_validations) : new.
	(excel_sheet_new) : init validation lists here if necessary.
	(excel_write_DVAL) : not here.

2002-12-24  Jody Goldberg <jody@gnome.org>

	* ms-excel-read.c (excel_read_NAME) : arrrggghh MS kills me.

	* ms-formula-read.c (excel_parse_formula) : disabled a bit too much
	  debug info and broke the code.
