@@ -40,16 +40,16 @@ gnumeric_reqs="
 glib-2.0	>= 2.0.0
 gobject-2.0	>= 2.0.0
 gmodule-2.0	>= 2.0.0
-libgsf-1	>= 1.7.1
+libgsf-1	>= 1.7.2
 gtk+-2.0	>= 2.0.0
 libxml-2.0	>= 2.4.12
 libglade-2.0	>= 1.99.7
 libgnomecanvas-2.0 >= 1.113.0
-gal-2.0		>= 0.0.6
+gal-2.0		>= 1.99
 libgnome-2.0	>= 1.105.0
 libgnomeui-2.0	>= 1.106.0
-libgnomeprint-2.2 >= 1.116.0
-libgnomeprintui-2.2 >= 1.116.0
+libgnomeprint-2.2 >= 2.2.0
+libgnomeprintui-2.2 >= 2.2.0
 "
 try_graphs=auto
 graph_msg="disabled by default"
@@ -105,7 +105,7 @@ if test "x$bonobo_msg" = "xyes"; then
 		libbonobo-2.0 >= 2.0.0
 		libbonoboui-2.0 >= 2.0.0
 		bonobo-activation-2.0 >= 1.0.2
-		libgsf-gnome-1 >= 1.7.1
+		libgsf-gnome-1 >= 1.7.2
 		],	
 		[bonobo_msg="yes"],
 		[bonobo_msg="NO"])
@@ -119,7 +119,7 @@ if test "x$bonobo_msg" = "xyes"; then
 libbonobo-2.0 >= 1.115.0
 libbonoboui-2.0
 bonobo-activation-2.0
-libgsf-gnome-1 >= 1.7.1"
+libgsf-gnome-1 >= 1.7.2"
 else
         gnumeric_bonobo_enabled=false
 fi
