@@ -10,6 +10,8 @@ excel_la_LDFLAGS = -module -avoid-version
 excel_la_SOURCES =		\
 	boot.c			\
 	boot.h			\
+	excel-xml-read.c	\
+	excel-xml-read.h	\
 	excel.h			\
 	formula-types.h		\
 	ms-excel-biff.h		\
