@@ -1,0 +1,13 @@
+/* vim: set sw=8: -*- Mode: C; tab-width: 8; indent-tabs-mode: t; c-basic-offset: 8 -*- */
+/**
+ * excel-xml-read.h : Import MS Excel (tm) XML generated by version XP
+ *
+ * Copyright (C) 2003 Jody Goldberg (jody@gnome.org)
+ **/
+#ifndef EXCEL_XML_READ_H
+#define EXCEL_XML_READ_H
+
+void excel_xml_read_cleanup (void);
+void excel_xml_read_init (void);
+
+#endif /* EXCEL_XML_READ_H */
